# fullstack-axum

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: gate.yml
src/: main.rs  settings.rs
src/api/v1/: hx.rs  mod.rs  routes.rs
src/core/: services.rs
src/static/js/: api.js
src/templates/: analytics.html  index.html  yahoo.html
src/tests/: api.rs  fixtures.rs  mod.rs  services.rs
src/views/: mod.rs  pages.rs
