[package]
name = "fullstack-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "*"
chrono = "0.4.33"
minijinja = { version = "1.0.12", features = ["loader"] }
polars = { version = "0.36.2", features = ["lazy", "csv", "dtype-date", "json", "serde-lazy", "strings", "timezones"] }
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["fs"] }
uuid = { version = "1.7.0", features = ["v4"] }
